--- a/Ваучеры/App.config
+++ b/Ваучеры/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Ваучеры.Properties.Settings.SES_MAGConnectionString"
+            connectionString="Data Source=ServerSet;Initial Catalog=SES_MAG;Persist Security Info=True;User ID=alemix;Password=6332336"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
