--- a/Ваучеры/Ваучеры.csproj
+++ b/Ваучеры/Ваучеры.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="c1.c1report.4, Version=4.6.20142.54737, Culture=neutral, PublicKeyToken=594a0605db190bb9, processorArchitecture=MSIL" />
+    <Reference Include="c1.win.c1command.4, Version=4.0.20142.19716, Culture=neutral, PublicKeyToken=e808566f358766d8, processorArchitecture=MSIL" />
+    <Reference Include="c1.win.c1report.4, Version=4.6.20142.54737, Culture=neutral, PublicKeyToken=41780e2fc605e636, processorArchitecture=MSIL" />
+    <Reference Include="c1.win.c1ribbon.4, Version=4.0.20142.597, Culture=neutral, PublicKeyToken=79882d576c6336da, processorArchitecture=MSIL" />
+    <Reference Include="c1.win.c1splitcontainer.4, Version=4.0.20142.56, Culture=neutral, PublicKeyToken=79882d576c6336da, processorArchitecture=MSIL" />
+    <Reference Include="c1.win.c1truedbgrid.4, Version=4.0.20142.61407, Culture=neutral, PublicKeyToken=75ae3fb0e2b1e0da, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +52,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Главная_Ваучеры.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Главная_Ваучеры.Designer.cs">
+      <DependentUpon>Главная_Ваучеры.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SES_MAGDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SES_MAGDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Печать_Лист.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Печать_Лист.Designer.cs">
+      <DependentUpon>Печать_Лист.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Главная_Ваучеры.resx">
+      <DependentUpon>Главная_Ваучеры.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +84,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Печать_Лист.resx">
+      <DependentUpon>Печать_Лист.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -72,6 +96,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SES_MAGDataSet.xsc">
+      <DependentUpon>SES_MAGDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="SES_MAGDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SES_MAGDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SES_MAGDataSet.xss">
+      <DependentUpon>SES_MAGDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
